--- a/XXXXX_signedin/templates/XXXXX_signedin/account/accept_invite.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/accept_invite.html
@@ -7,7 +7,7 @@
     <head>{% include "../shared/head.html" %}</head>
     <body>
         {% include "../shared/notifications.html" %}
-        <section class="container">
+        <section class="container marginTop">
             {% include "../shared/top_nav.html" %}
             <div>
                 <div>
