--- a/XXXXX_signedin/templates/XXXXX_signedin/account/account_inactive.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/account_inactive.html
@@ -7,6 +7,7 @@
     <head>{% include "../shared/head.html" %}</head>
     <body>
         <div class="container marginTop">
+            {% include "../shared/top_nav.html" %}
             <h1>Account Inactive</h1>
             <p>This account is inactive.</p>
             {% include "../shared/footer.html" %}
