--- a/XXXXX_signedin/templates/XXXXX_signedin/account/password_reset.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/password_reset.html
@@ -8,6 +8,7 @@
     <head>{% include "../shared/head.html" %}</head>
     <body>
         <div class="container marginTop">
+            {% include "../shared/top_nav.html" %}
             {% if request.GET.e %}
                 <h3>Create Password</h3>
             {% else %}
