--- a/XXXXX_signedin/templates/XXXXX_signedin/account/password_reset_done.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/password_reset_done.html
@@ -8,6 +8,7 @@
     <head>{% include "../shared/head.html" %}</head>
     <body>
         <div class="container marginTop">
+            {% include "../shared/top_nav.html" %}
             <h3>Password Reset</h3>
             {% if user.is_authenticated %}
                 {% include "account/snippets/already_logged_in.html" %}
