--- a/XXXXX_signedin/templates/XXXXX_signedin/account/password_reset_from_key_done.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/password_reset_from_key_done.html
@@ -7,6 +7,7 @@
     <head>{% include "../shared/head.html" %}</head>
     <body>
         <div class="container marginTop">
+            {% include "../shared/top_nav.html" %}
             <h1 class="title is-size-4">Change Password</h1>
             <div class="content">
                 <p>Your password has been changed.</p>
