--- a/XXXXX_signedin/templates/XXXXX_signedin/account/signup_closed.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/signup_closed.html
@@ -7,6 +7,7 @@
     <head>{% include "../shared/head.html" %}</head>
     <body>
         <div class="container marginTop">
+            {% include "../shared/top_nav.html" %}
             <h1>Sign Up Closed</h1>
             <p>We are sorry, but the sign up is currently closed.</p>
             {% include "../shared/footer.html" %}
