--- a/XXXXX_signedin/templates/XXXXX_signedin/account/change_email.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/change_email.html
@@ -7,7 +7,7 @@
     <head>{% include "../shared/head.html" %}</head>
     <body>
         {% include "../shared/notifications.html" %}
-        <div class="container">
+        <div class="container marginTop">
             {% include "../shared/top_nav.html" %}
             <div class="left-menu-container">
                 <div class="left-side-menu">
