--- a/XXXXX_signedin/templates/XXXXX_signedin/account/password_change.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/password_change.html
@@ -8,7 +8,7 @@
     <head>{% include "../shared/head.html" %}</head>
     <body>
         {% include "../shared/notifications.html" %}
-        <div class="container">
+        <div class="container marginTop">
             {% include "../shared/top_nav.html" %}
 
             <div class="left-menu-container">
