--- a/XXXXX_signedin/templates/XXXXX_signedin/account/password_reset_from_key.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/password_reset_from_key.html
@@ -7,6 +7,7 @@
     <head>{% include "../shared/head.html" %}</head>
     <body>
         <div class="container marginTop">
+            {% include "../shared/top_nav.html" %}
             <h3>
                 {% if token_fail %}
                     Bad Token
