--- a/XXXXX_signedin/templates/XXXXX_signedin/account/signup.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/signup.html
@@ -26,10 +26,12 @@
                         {{ form.invitation_id.errors }}
                     {% endif %}
                     <input type="submit" value="Sign Up">
+                    {% comment %}
                     <hr />
                     <div>
                         <a href="{% provider_login_url 'google' method='oauth2' %}">Sign up with Google</a>
                     </div>
+                    {% endcomment %}
                     <hr />
                     <div>
                         Already have account?
