--- a/XXXXX_signedin/templates/XXXXX_signedin/account/socialaccount/signup.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/socialaccount/signup.html
@@ -36,11 +36,12 @@
 
                 <input type="submit" value="Sign Up">
             </form>
-
+            {% comment %}
             <hr />
             <div>
                 <a href="{% provider_login_url 'google' method='oauth2' %}">Sign up with Google</a>
             </div>
+            {% endcomment %}
             <hr />
             <div>
                 Already have an account?
