--- a/XXXXX_signedin/templates/XXXXX_signedin/account/confirm_email_verification_code.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/confirm_email_verification_code.html
@@ -4,6 +4,7 @@
 <html lang="en">
     <head>{% include "../shared/head.html" %}</head>
     <body>
+        {% include "../shared/notifications.html" %}
         <div class="container marginTop">
             {% include "../shared/top_nav.html" %}
             <h1>Enter Email Verification Code</h1>
