--- a/XXXXX_signedin/templates/XXXXX_signedin/account/confirm_login_code.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/confirm_login_code.html
@@ -5,6 +5,7 @@
 <html lang="en">
     <head>{% include "../shared/head.html" %}</head>
     <body>
+        {% include "../shared/notifications.html" %}
         <div class="container marginTop">
             {% include "../shared/top_nav.html" %}
             <h1>Enter Sign-In Code</h1>
