--- a/XXXXX_signedin/templates/XXXXX_signedin/account/reauthenticate.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/reauthenticate.html
@@ -5,6 +5,7 @@
     {% include "../shared/head.html" %}
 </head>
 <body>
+    {% include "../shared/notifications.html" %}
     <div class="container marginTop">
         {% include "../shared/top_nav.html" %}
         <h1>Confirm Access</h1>
