--- a/XXXXX_signedin/templates/XXXXX_signedin/account/signup.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/signup.html
@@ -7,6 +7,7 @@
 <html lang="en">
     <head>{% include "../shared/head.html" %}</head>
     <body>
+        {% include "../shared/notifications.html" %}
         <div class="container marginTop">
             {% include "../shared/top_nav.html" %}
             <div>
