--- a/XXXXX_signedin/templates/XXXXX_signedin/account/signup_closed.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/signup_closed.html
@@ -6,6 +6,7 @@
 <html lang="en">
     <head>{% include "../shared/head.html" %}</head>
     <body>
+        {% include "../shared/notifications.html" %}
         <div class="container marginTop">
             {% include "../shared/top_nav.html" %}
             <h1>Sign Up Closed</h1>
