better nav bar css

--- a/XXXXX_signedin/templates/XXXXX_signedin/account/hijack.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/hijack.html
@@ -9,11 +9,11 @@
         <div class="container marginTop">
             {% include "../shared/top_nav.html" %}
 
-            <div class="left-menu-container">
-                <div class="left-side-menu">
+            <div id="dashboardContainer">
+                <div id="leftNav">
                     {% include "../signedin/shared/side_nav.html" %}
                 </div>
-                <div class="right-side-content">
+                <div id="dashboardContent">
                     <section class="app-card">
                         <h3 class="title">Impersonate a User</h3>
                         <p class="lead">Use the form below to temporarily login to the site as someone else. Use this feature responsibly!</p>
