--- a/XXXXX_signedin/templates/XXXXX_signedin/account/list_groups.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/list_groups.html
@@ -9,11 +9,11 @@
         <div class="container marginTop">
             {% include "../shared/top_nav.html" %}
 
-            <div class="left-menu-container">
-                <div class="left-side-menu">
+            <div id="dashboardContainer">
+                <div id="leftNav">
                     {% include "../signedin/shared/side_nav.html" %}
                 </div>
-                <div class="right-side-content">
+                <div id="dashboardContent">
                     <div>List Groups</div>
                 </div>
             </div>
