--- a/XXXXX_signedin/templates/XXXXX_signedin/account/logout.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/logout.html
@@ -11,11 +11,11 @@
         <div class="container marginTop">
             {% include "../shared/top_nav.html" %}
 
-            <div class="left-menu-container">
-                <div class="left-side-menu">
+            <div id="dashboardContainer">
+                <div id="leftNav">
                     {% include "../signedin/shared/side_nav.html" %}
                 </div>
-                <div class="right-side-content">
+                <div id="dashboardContent">
                     <section class="app-card">
                         <h1 class="title is-size-4">Sign out</h1>
                         <p class="subtitle">{% trans "Are you sure you want to sign out?" %}</p>
