--- a/XXXXX_signedin/templates/XXXXX_signedin/account/password_change.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/password_change.html
@@ -11,11 +11,11 @@
         <div class="container marginTop">
             {% include "../shared/top_nav.html" %}
 
-            <div class="left-menu-container">
-                <div class="left-side-menu">
+            <div id="dashboardContainer">
+                <div id="leftNav">
                     {% include "../signedin/shared/side_nav.html" %}
                 </div>
-                <div class="right-side-content">
+                <div id="dashboardContent">
                     <section class="app-card">
                         <h3 class="lead">Change Password</h3>
                         <form method="post"
