--- a/XXXXX_signedin/templates/XXXXX_signedin/account/verification_sent.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/verification_sent.html
@@ -9,11 +9,11 @@
         {% include "../shared/notifications.html" %}
         <div class="container marginTop">
             {% include "../shared/top_nav.html" %}
-            <div class="left-menu-container">
-                <div class="left-side-menu">
+            <div id="dashboardContainer">
+                <div id="leftNav">
                     {% include "../signedin/shared/side_nav.html" %}
                 </div>
-                <div class="right-side-content">
+                <div id="dashboardContent">
                     <h3>Verify Your E-mail Address</h3>
                     <p>
                         We have sent an e-mail to you for verification.
