--- a/XXXXX_signedin/templates/XXXXX_signedin/signedin/index.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/signedin/index.html
@@ -8,7 +8,7 @@
         <div class="container">
             {% include "../shared/top_nav.html" %}
             <div>
-                <div role="group">
+                <div id="dashboardContainer">
                     <div id="leftNav">{% include "./shared/side_nav.html" %}</div>
                     <div id="dashboardContent">Logged in Dashboard Home</div>
                 </div>
