--- a/XXXXX_signedin/templates/XXXXX_signedin/account/verified_email_required.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/verified_email_required.html
@@ -9,11 +9,11 @@
         {% include "../shared/notifications.html" %}
         <div class="container marginTop">
             {% include "../shared/top_nav.html" %}
-            <div class="left-menu-container">
-                <div class="left-side-menu">
+            <div id="dashboardContainer">
+                <div id="leftNav">
                     {% include "../signedin/shared/side_nav.html" %}
                 </div>
-                <div class="right-side-content">
+                <div id="dashboardContent">
                     <h1>Verify Your Email Address</h1>
                     {% url 'account_email' as email_url %}
                     <p>
